--- a/react/MainBannerCarousel.module.css
+++ b/react/MainBannerCarousel.module.css
@@ -10,4 +10,7 @@
 .paginationDotsContainer {
   background-color: #FFFFFF;
   border-radius: 40px;
+  bottom: 1em;
+  box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.16);
+  width: fit-content;
 }
