--- a/react/Newsletter.module.css
+++ b/react/Newsletter.module.css
@@ -1,12 +1,20 @@
 .newsletter-cta {
   font-size: 1.25rem;
+  line-height: 28px;
+  margin-top: 20px;
+  margin-bottom: 12px;
+}
+
+.newsletterSectionContent {
+  min-width: 288px;
+  max-width: 592px;
+  margin-right: 1em;
+  margin-left: 1em;
 }
 
 .newsletterForm {
   display: flex;
   justify-content: center;
-  border: 4px solid rgba(0, 51, 100, 0.25);
-  border-radius: 4px;
 }
 
 .emailInputContainer {
@@ -18,12 +26,33 @@
   border-radius: 0;
   color: #717786;
   border: none;
+  border-top: 4px solid rgba(0, 51, 100, 0.25);
+  border-left: 4px solid rgba(0, 51, 100, 0.25);
+  border-bottom: 4px solid rgba(0, 51, 100, 0.25);
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
 }
 
+.emailInputContainer--invalid :global(.vtex-styleguide-9-x-hideDecorators) {
+  background-color: #fff;
+  border-radius: 0;
+  color: #717786;
+  border: none;
+  border-top: 4px solid #ED6A5F;
+  border-left: 4px solid #ED6A5F;
+  border-bottom: 4px solid #ED6A5F;
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+}
 
 .emailInputContainer :global(.vtex-input-prefix__group) {
   border-radius: 0;
   border: none;
+}
+
+.emailInputContainer :global(.vtex-input__error) {
+  color: #fff;
+  font-size: 0.75rem;
 }
 
 .formSubmitContainer :global(.vtex-button) {
@@ -31,15 +60,79 @@
   color: #0067c7;
   border: none;
   border-radius: 0;
+  border-top: 4px solid rgba(0, 51, 100, 0.25);
+  border-right: 4px solid rgba(0, 51, 100, 0.25);
+  border-bottom: 4px solid rgba(0, 51, 100, 0.25);
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
+}
+
+.formSubmitContainer--invalid :global(.vtex-button) {
+  background-color: #fff;
+  color: #0067c7;
+  border: none;
+  border-radius: 0;
+  border-top: 4px solid #ED6A5F;
+  border-right: 4px solid #ED6A5F;
+  border-bottom: 4px solid #ED6A5F;
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
 }
 
 @media only screen and (min-width: 640px) {
   .newsletter-cta {
     font-size: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+
+  .subscriptionSuccess {
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+}
+
+@media only screen and (min-width: 640px) and (max-width: 1024px) {
+  .newsletterSectionContent {
+    min-width: 592px;
+    max-width: 928px;
+    margin-right: 1.5em;
+    margin-left: 1.5em;
   }
 
   .newsletterForm {
-    max-width: 680px;
     width: 50%;
+    margin-top: 24px;
+    margin-bottom: 24px;
+  }
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1280px) {
+  .newsletterSectionContent {
+    min-width: 976px;
+    max-width: 1152px;
+    margin-right: 3em;
+    margin-left: 3em;
+  }
+
+  .newsletterForm {
+    width: 50%;
+    margin-top: 24px;
+    margin-bottom: 24px;
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  .newsletterSectionContent {
+    min-width: 1152px;
+    max-width: 1536px;
+    margin-right: 4em;
+    margin-left: 4em;
+  }
+
+  .newsletterForm {
+    width: 50%;
+    margin-top: 24px;
+    margin-bottom: 24px;
   }
 }
