--- a/react/MainBannerCarousel.module.css
+++ b/react/MainBannerCarousel.module.css
@@ -1,10 +1,12 @@
+.sliderLayoutContainer {}
+
 .sliderArrows {
+  color: #FFFFFF;
   width: 48px;
   height: 48px;
-  background: #003364 !important;
-  opacity: 0.32;
+  background: rgba(0, 51, 100, 0.32) !important;
   border-radius: 50%;
-  color: #FFFFFF;
+  display: none;
 }
 
 .paginationDotsContainer {
@@ -13,4 +15,22 @@
   bottom: 1em;
   box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.16);
   width: fit-content;
+}
+
+.paginationDot {
+  height: 8px !important;
+  width: 8px !important;
+}
+
+@media screen and (min-width: 80em) {
+  .sliderArrows {
+    /* 4em default value for 80em breakpoint. This calc deals with 80em+ screens */
+    margin: 0 calc(4em + (100% - 80em) / 2)
+  }
+}
+
+@media (hover: hover) { 
+  .sliderLayoutContainer:hover .sliderArrows {
+    display: block;
+  }
 }
