--- a/react/components/Banner.module.css
+++ b/react/components/Banner.module.css
@@ -5,27 +5,28 @@
 
 /* Info Container */
 .bannerInfoContainer {
-  padding-bottom: 43px;
-  padding-left: 29px;
-  padding-right: 29px;
-  padding-top: 43px;
+  margin: 0
 }
 
 .bannerTitle {
   color: #FFFFFF;
-  font-size: 40px;
-  line-height: 48px;
+  font-size: 28pt;
 }
 
 .bannerSubtitle {
   color: #FFFFFF;
-  font-size: 16px;
-  line-height: 20px;
+  font-size: 12pt;
+  margin-bottom: 12px;
+}
+
+.bannerButtonContainer {
+  margin-top: 20px;
 }
 
 .bannerButton {
   background-color: #FFFFFF;
   color: #0067C7;
+  font-size: 14pt;
 }
 
 .bannerBlue {
@@ -43,16 +44,68 @@
 /* Image Container */
 .bannerImageContainer {}
 
-/* Desktop breakpoint */
-@media screen and (min-width: 40em) {
+/* -s */
+@media screen and (min-width: 20em) {
   .bannerInfoContainer {
-    padding-bottom: 82px;
-    padding-left: 216px;
-    padding-right: 216px;
-    padding-top: 82px;
+    /* 3em from arrows */
+    padding-left: 5em;
+    padding-right: 5em; 
   }
 
   .bannerImageContainer {
-    padding-right: 197px;
+    /* 3em from arrows */
+    padding-right: 5em;
+  }
+}
+
+/* -ns breakpoints */
+@media screen and (min-width: 40em) {
+  .bannerInfoContainer {
+    /* 3em from arrows */
+    padding-left: 6.5em;
+    padding-right: 6.5em; 
+  }
+
+  .bannerImageContainer {
+    /* 3em from arrows */
+    padding-right: 6.5em;
+  }
+}
+
+@media screen and (min-width: 64em) {
+  .bannerInfoContainer {
+    /* 3em from arrows */
+    padding-left: 10em;
+    padding-right: 10em; 
+  }
+
+  .bannerImageContainer {
+    /* 3em from arrows */
+    padding-right: 10em;
+  }
+}
+
+@media screen and (min-width: 80em) {
+  .bannerInfoContainer {
+    /* 3em from arrows */
+    padding-left: 15em;
+    padding-right: 15em;
+    /* calc to add margin till the left and right arrow */
+    margin: 0 calc((100% - 80em) / 2);
+  }
+
+  .bannerImageContainer {
+    /* 3em from arrows */
+    padding-right: 15em;
+    /* calc to add margin till the left and right arrow */
+    margin-right: calc((100% - 80em) / 2);
+  }
+}
+
+/* non touch breakpoints */
+@media (hover: none) {
+  .bannerInfoContainer {
+    padding-left: 1em;
+    padding-right: 1em;
   }
 }
