--- a/react/Newsletter.module.css
+++ b/react/Newsletter.module.css
@@ -5,6 +5,10 @@
   margin-bottom: 12px;
 }
 
+.subscriptionSuccess {
+  margin-bottom: 24px;
+}
+
 .newsletterSectionContent {
   min-width: 288px;
   max-width: 592px;
@@ -15,6 +19,7 @@
 .newsletterForm {
   display: flex;
   justify-content: center;
+  margin-bottom: 24px;
 }
 
 .emailInputContainer {
@@ -24,7 +29,6 @@
 .emailInputContainer :global(.vtex-styleguide-9-x-hideDecorators) {
   background-color: #fff;
   border-radius: 0;
-  color: #717786;
   border: none;
   border-top: 4px solid rgba(0, 51, 100, 0.25);
   border-left: 4px solid rgba(0, 51, 100, 0.25);
@@ -36,7 +40,6 @@
 .emailInputContainer--invalid :global(.vtex-styleguide-9-x-hideDecorators) {
   background-color: #fff;
   border-radius: 0;
-  color: #717786;
   border: none;
   border-top: 4px solid #ED6A5F;
   border-left: 4px solid #ED6A5F;
@@ -48,6 +51,7 @@
 .emailInputContainer :global(.vtex-input-prefix__group) {
   border-radius: 0;
   border: none;
+  min-height: 52px;
 }
 
 .emailInputContainer :global(.vtex-input__error) {
@@ -55,9 +59,14 @@
   font-size: 0.75rem;
 }
 
+.emailInputContainer :global(.vtex-styleguide-9-x-input) {
+  height: 52px;
+}
+
 .formSubmitContainer :global(.vtex-button) {
   background-color: #fff;
   color: #0067c7;
+  height: 52px;
   border: none;
   border-radius: 0;
   border-top: 4px solid rgba(0, 51, 100, 0.25);
@@ -89,6 +98,29 @@
   .subscriptionSuccess {
     margin-top: auto;
     margin-bottom: auto;
+  }
+
+  .emailInputContainer :global(.vtex-input-prefix__group) {
+    border-radius: 0;
+    border: none;
+    min-height: 56px;
+  }
+
+  .emailInputContainer :global(.vtex-styleguide-9-x-input) {
+    height: 56px;
+  }
+
+  .formSubmitContainer :global(.vtex-button) {
+    background-color: #fff;
+    color: #0067c7;
+    height: 56px;
+    border: none;
+    border-radius: 0;
+    border-top: 4px solid rgba(0, 51, 100, 0.25);
+    border-right: 4px solid rgba(0, 51, 100, 0.25);
+    border-bottom: 4px solid rgba(0, 51, 100, 0.25);
+    border-bottom-right-radius: 4px;
+    border-top-right-radius: 4px;
   }
 }
 
