--- a/react/components/Banner.module.css
+++ b/react/components/Banner.module.css
@@ -5,7 +5,10 @@
 
 /* Info Container */
 .bannerInfoContainer {
-  margin: 0
+  margin-left: 4em;
+  margin-right: 4em;
+  padding-left: 1em;
+  padding-right: 1em; 
 }
 
 .bannerTitle {
@@ -42,70 +45,97 @@
 }
 
 /* Image Container */
-.bannerImageContainer {}
+.bannerImageContainer {
+  margin-right: 4em;
+  padding-right: 1em; 
+}
 
 /* -s */
 @media screen and (min-width: 20em) {
   .bannerInfoContainer {
-    /* 3em from arrows */
-    padding-left: 5em;
-    padding-right: 5em; 
+    /* 4em from arrows size and margin */
+    margin-left: 4em;
+    margin-right: 4em;
+    padding-left: 1em;
+    padding-right: 1em; 
   }
 
   .bannerImageContainer {
-    /* 3em from arrows */
-    padding-right: 5em;
+    /* 4em from arrows size and margin */
+    margin-right: 4em;
+    padding-right: 1em; 
   }
 }
 
 /* -ns breakpoints */
 @media screen and (min-width: 40em) {
   .bannerInfoContainer {
-    /* 3em from arrows */
-    padding-left: 6.5em;
-    padding-right: 6.5em; 
+    /* 4.5em from arrows size and margin */
+    margin-left: 4.5em;
+    margin-right: 4.5em;
+    padding-left: 2em;
+    padding-right: 2em; 
   }
 
   .bannerImageContainer {
-    /* 3em from arrows */
-    padding-right: 6.5em;
+    /* 4.5em from arrows size and margin */
+    margin-right: 4.5em;
+    padding-right: 2em;
   }
 }
 
 @media screen and (min-width: 64em) {
   .bannerInfoContainer {
-    /* 3em from arrows */
-    padding-left: 10em;
-    padding-right: 10em; 
+    /* 6em from arrows size and margin */
+    margin-left: 6em;
+    margin-right: 6em;
+    padding-left: 4em;
+    padding-right: 4em; 
   }
 
   .bannerImageContainer {
-    /* 3em from arrows */
-    padding-right: 10em;
+    /* 6em from arrows size and margin */
+    margin-right: 6em;
+    padding-right: 4em;
   }
 }
 
 @media screen and (min-width: 80em) {
+  /*  8em padd */
   .bannerInfoContainer {
-    /* 3em from arrows */
-    padding-left: 15em;
-    padding-right: 15em;
-    /* calc to add margin till the left and right arrow */
-    margin: 0 calc((100% - 80em) / 2);
+    /* 7em from arrows size and margin. calc to add margin till the left and right arrow */
+    margin-left: calc(7em + (100% - 80em) / 2);
+    margin-right: calc(7em + (100% - 80em) / 2);
+    padding-left: 8em;
+    padding-right: 8em;
   }
 
   .bannerImageContainer {
-    /* 3em from arrows */
-    padding-right: 15em;
-    /* calc to add margin till the left and right arrow */
-    margin-right: calc((100% - 80em) / 2);
+    /* 7em from arrows size and margin. calc to add margin till the left and right arrow */
+    margin-right: calc(7em + (100% - 80em) / 2);
+    padding-right: 8em;
   }
 }
 
 /* non touch breakpoints */
 @media (hover: none) {
   .bannerInfoContainer {
-    padding-left: 1em;
-    padding-right: 1em;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .bannerImageContainer {
+    margin-right: 0;
+  }
+}
+
+@media (hover: none) and (min-width: 80em) {
+  .bannerInfoContainer {
+    margin-left: calc((100% - 80em) / 2);
+    margin-right: calc((100% - 80em) / 2);
+  }
+
+  .bannerImageContainer {
+    margin-right: calc((100% - 80em) / 2);
   }
 }
