--- a/react/components/Banner.module.css
+++ b/react/components/Banner.module.css
@@ -3,40 +3,8 @@
   max-height: 384px;
 }
 
-/* Info Container */
-.bannerInfoContainer {
-  /* Padding is the arrow width(3em) + distance between content to arrow */
-  padding-left: 4em;
-  padding-right: 4em;
-}
-
-.bannerTitle {
-  color: #FFFFFF;
-  font-size: 28pt;
-}
-
-.bannerSubtitle {
-  color: #FFFFFF;
-  font-size: 12pt;
-  margin-bottom: 1.25em;
-}
-
-.bannerButtonContainer {
-  margin-top: 20px;
-}
-
-.bannerButton {
-  background-color: #FFFFFF;
-  color: #0067C7;
-  font-size: 14pt;
-}
-
-.bannerButton:hover {
-  color: #003364;
-}
-
 .imageElement {
-  object-fit: contain;
+  object-fit: fill;
 }
 
 .bannerBlue {
@@ -57,48 +25,5 @@
   .bannerContainer {
     height: 328px;
     max-height: 328px;
-  }
-
-  .bannerInfoContainer {
-    /* Padding is the arrow width(3em) + distance between content to arrow */
-    padding-left: 5em;
-    padding-right: 5em;
-  }
-
-  .bannerSubtitle {
-    margin-bottom: 2em;
-  }
-}
-
-@media screen and (min-width: 64em) {
-  .bannerInfoContainer {
-    /* Padding is the arrow width(3em) + distance between content to arrow */
-    padding-left: 7em;
-    padding-right: 7em;
-  }
-}
-
-@media screen and (min-width: 80em) {
-  .bannerInfoContainer {
-    /* Padding is the arrow width(3em) + distance between content to arrow */
-    padding-left: 11em;
-    padding-right: 11em;
-  }
-}
-
-@media screen and (min-width: 104em) {
-  .bannerInfoContainer {
-    /* Margin is the content margins */
-    margin-left: calc(4em + (100% - 104em) / 2);
-    margin-right: calc(4em + (100% - 104em) / 2);
-  }
-}
-
-/* non touch breakpoints */
-@media (hover: none) {
-  .bannerInfoContainer {
-    /* remove arrow width margins and distance between content to arrow */
-    padding-left: 0;
-    padding-right: 0;
   }
 }
