--- a/react/Banner.module.css
+++ b/react/Banner.module.css
@@ -14,15 +14,18 @@
 }
 
 @media screen and (min-width: 40em) {
+  .image {
+    border-radius: 8px;
+  }
+}
+
+@media screen and (min-width: 64em) {
   .container {
     height: 256px;
     max-height: 256px;
   }
 
   .image {
-    border-radius: 8px;
-    box-sizing: border-box;
-
     height: 256px;
     max-height: 256px;
   }
