--- a/react/Banner.module.css
+++ b/react/Banner.module.css
@@ -1,6 +1,5 @@
-.container {
-  height: 160px;
-  max-height: 160px;
+.link {
+  line-height: 0;
 }
 
 .image {
@@ -8,8 +7,7 @@
   box-sizing: border-box;
   border-radius: 4px;
 
-  object-fit: fill;
-  height: 160px;
+  object-fit: contain;
   max-height: 160px;
 }
 
@@ -20,13 +18,7 @@
 }
 
 @media screen and (min-width: 64em) {
-  .container {
-    height: 256px;
-    max-height: 256px;
-  }
-
   .image {
-    height: 256px;
     max-height: 256px;
   }
 }
