--- a/react/components/Container.module.css
+++ b/react/components/Container.module.css
@@ -1,10 +1,12 @@
 @media screen and (min-width: 104em) {
   .containerPadding {
     /* 4em is the content margin. This calc deals with 104em+ screens */
-    padding: 0 calc(4em + (100% - 104em) / 2);
+    padding-left: calc(4em + (100% - 104em) / 2);
+    padding-right: calc(4em + (100% - 104em) / 2);;
   }
 
   .containerMargin {
-    margin: 0 calc(4em + (100% - 104em) / 2);
+    margin-left: calc(4em + (100% - 104em) / 2);
+    margin-right: calc(4em + (100% - 104em) / 2);
   }
 }
